--- a/RMG.Web/Areas/Admin/Views/Platform/Index.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Platform/Index.cshtml
@@ -6,7 +6,7 @@
             <div class="col-lg-6">
                 <div class="page-header-left">
                     <h3>
-                        Genre
+                        Platform
                         @* <small>Multikart Admin panel</small> *@
                     </h3>
                 </div>
@@ -38,9 +38,9 @@
                         </div>
                     </form>
 
-                    <a type="button" asp-controller="Genre" asp-action="Upsert" class="btn btn-primary add-row mt-md-0 mt-2">
+                    <a type="button" asp-controller="Platform" asp-action="Upsert" class="btn btn-primary add-row mt-md-0 mt-2">
                         Add
-                        Genre
+                        Platform
                     </a>
                 </div>
 
@@ -93,7 +93,7 @@
 
 @section Scripts{
     @{
-        <script src="~/js/jsfiles/genre.js"></script>
+        <script src="~/js/jsfiles/platform.js"></script>
 
     }
 }
