--- a/RMG.Web/Areas/Customer/Views/Shared/_Layout.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
 	<!-- Theme css -->
 	<link rel="stylesheet" type="text/css" href="~/customer/css/style.css">
 	<link rel="stylesheet" href="//cdn.datatables.net/2.0.8/css/dataTables.dataTables.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
 <body class="theme-color-1">
 
@@ -591,9 +592,9 @@
 	<script src="~/customer/js/theme-setting.js"></script>
 	<script src="~/customer/js/script.js"></script>
 
-	<script src="//cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+	<script src="//cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
 	<script>
 		function openSearch() {
 			document.getElementById("search-overlay").style.display = "block";
