--- a/RMG.Web/Areas/Customer/Views/Games/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Games/Index.cshtml
@@ -36,84 +36,40 @@
                             </span>
                         </div>
                         <div class="collection-collapse-block open">
-                            <h3 class="collapse-block-title">brand</h3>
+                            <h3 class="collapse-block-title">Genre</h3>
                             <div class="collection-collapse-block-content">
-                                <div class="collection-brand-filter">
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="zara">
-                                        <label class="form-check-label" for="zara">zara</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="vera-moda">
-                                        <label class="form-check-label" for="vera-moda">vera-moda</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="forever-21">
-                                        <label class="form-check-label" for="forever-21">forever-21</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="roadster">
-                                        <label class="form-check-label" for="roadster">roadster</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="only">
-                                        <label class="form-check-label" for="only">only</label>
-                                    </div>
+                                <div class="collection-brand-filter" id="genre-filter">
+
                                 </div>
                             </div>
                         </div>
-                        <!-- color filter start here -->
-                        <div class="collection-collapse-block open">
-                            <h3 class="collapse-block-title">colors</h3>
-                            <div class="collection-collapse-block-content">
-                                <div class="color-selector">
-                                    <ul>
-                                        <li class="color-1 active"></li>
-                                        <li class="color-2"></li>
-                                        <li class="color-3"></li>
-                                        <li class="color-4"></li>
-                                        <li class="color-5"></li>
-                                        <li class="color-6"></li>
-                                        <li class="color-7"></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                       
                         <!-- size filter start here -->
                         <div class="collection-collapse-block border-0 open">
-                            <h3 class="collapse-block-title">size</h3>
+                            <h3 class="collapse-block-title">Platform</h3>
                             <div class="collection-collapse-block-content">
-                                <div class="collection-brand-filter">
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="hundred">
-                                        <label class="form-check-label" for="hundred">s</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="twohundred">
-                                        <label class="form-check-label" for="twohundred">m</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="threehundred">
-                                        <label class="form-check-label" for="threehundred">l</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="fourhundred">
-                                        <label class="form-check-label" for="fourhundred">xl</label>
-                                    </div>
+                                <div class="collection-brand-filter" id="platform-filter">
+
                                 </div>
                             </div>
                         </div>
-                        <!-- price filter start here -->
                         <div class="collection-collapse-block border-0 open">
-                            <h3 class="collapse-block-title">price</h3>
+                            <h3 class="collapse-block-title">Rating</h3>
                             <div class="collection-collapse-block-content">
-                                <div class="wrapper mt-3">
-                                    <div class="range-slider">
-                                        <input type="text" class="js-range-slider" value="" />
-                                    </div>
+                                <div class="collection-brand-filter" id="rating-filter">
                                 </div>
                             </div>
                         </div>
+                        <div class="collection-collapse-block border-0 open">
+                            <h3 class="collapse-block-title">Release Date</h3>
+                            <div class="collection-collapse-block-content">
+                                <div class="collection-brand-filter" id="release-filter">
+                                    <input type="Date" class="form-control" name="name" value="" />
+                                </div>
+                            </div>
+                        </div>
+                       
+
                     </div>
                     <!-- silde-bar colleps block end here -->
                   
@@ -322,3 +278,10 @@
     </div>
 </section>
 <!-- section End -->
+
+
+@section Scripts{
+    @{
+        <script src="~/jsfiles/gamecustomer.js"></script>
+    }
+}
