--- a/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -313,6 +313,21 @@
                                     </a>
                                 </li>
                             </ul>
+                        <li>
+                            <a class="sidebar-header" href="javascript:void(0)">
+                                <i data-feather="archive"></i>
+                                <span>Reviews</span>
+                                <i class="fa fa-angle-right pull-right"></i>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li>
+                                    <a asp-controller="Genre" asp-action="Index">
+                                        <i class="fa fa-circle"></i>
+                                        <span>Reviews List</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         </li>
 
                         <li>
