--- a/RMG.Web/Areas/Customer/Views/Shared/_Notification.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Shared/_Notification.cshtml
@@ -4,7 +4,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<script type="text/javascript">
 		console.log('@TempData["success"]')
-		toastr.info('@TempData["success"]');
+		toastr.success('@TempData["success"]');
 
 	</script>
 }
@@ -13,6 +13,6 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<script type="text/javascript">
-		toastr.info('@TempData["error"]');
+		toastr.error('@TempData["error"]');
 	</script>
 }
