--- a/RMG.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/RMG.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -116,6 +116,7 @@
                             <label asp-for="Input.Password"></label>
                             <input asp-for="Input.Password" type="password" autocomplete="current-password" aria-required="true" class="form-control" id="review"
                                    placeholder="Enter your password" required="">
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
                         </div><button id="login-submit" type="submit" class="btn btn-solid">Login</button>
                     </form>
                 </div>
